# unipod_driver

./: .gitignore  CMakeLists.txt  package.xml
config/: unipod_config.yaml
include/unipod_driver/: unipod_comm.hpp  unipod_driver_node.hpp  unipod_protocol.hpp
launch/: unipod_driver.launch.py
msg/: AITrackingData.msg  CameraStatus.msg  FirmwareVersion.msg  GimbalAttitude.msg  GimbalStatus.msg  LaserData.msg  ThermalData.msg
src/: unipod_comm.cpp  unipod_driver_node.cpp  unipod_protocol.cpp
srv/: CameraControl.srv  FocusControl.srv  GimbalControl.srv  SetGimbalAngle.srv  SetVideoMode.srv  ThermalControl.srv  ZoomControl.srv
